; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5212/extr_ar5212_recv.c_ar5212ClrMulticastFilterIndex.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5212/extr_ar5212_recv.c_ar5212ClrMulticastFilterIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AH_FALSE = common dso_local global i32 0, align 4
@AR_MCAST_FIL1 = common dso_local global i32 0, align 4
@AR_MCAST_FIL0 = common dso_local global i32 0, align 4
@AH_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ar5212ClrMulticastFilterIndex(%struct.ath_hal* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ath_hal*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sge i32 %7, 64
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @AH_FALSE, align 4
  store i32 %10, i32* %3, align 4
  br label %41

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = icmp sge i32 %12, 32
  br i1 %13, label %14, label %27

14:                                               ; preds = %11
  %15 = load %struct.ath_hal*, %struct.ath_hal** %4, align 8
  %16 = load i32, i32* @AR_MCAST_FIL1, align 4
  %17 = call i32 @OS_REG_READ(%struct.ath_hal* %15, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load %struct.ath_hal*, %struct.ath_hal** %4, align 8
  %19 = load i32, i32* @AR_MCAST_FIL1, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %5, align 4
  %22 = sub nsw i32 %21, 32
  %23 = shl i32 1, %22
  %24 = xor i32 %23, -1
  %25 = and i32 %20, %24
  %26 = call i32 @OS_REG_WRITE(%struct.ath_hal* %18, i32 %19, i32 %25)
  br label %39

27:                                               ; preds = %11
  %28 = load %struct.ath_hal*, %struct.ath_hal** %4, align 8
  %29 = load i32, i32* @AR_MCAST_FIL0, align 4
  %30 = call i32 @OS_REG_READ(%struct.ath_hal* %28, i32 %29)
  store i32 %30, i32* %6, align 4
  %31 = load %struct.ath_hal*, %struct.ath_hal** %4, align 8
  %32 = load i32, i32* @AR_MCAST_FIL0, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* %5, align 4
  %35 = shl i32 1, %34
  %36 = xor i32 %35, -1
  %37 = and i32 %33, %36
  %38 = call i32 @OS_REG_WRITE(%struct.ath_hal* %31, i32 %32, i32 %37)
  br label %39

39:                                               ; preds = %27, %14
  %40 = load i32, i32* @AH_TRUE, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %9
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @OS_REG_READ(%struct.ath_hal*, i32) #1

declare dso_local i32 @OS_REG_WRITE(%struct.ath_hal*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
